implements recharge
